# DNSSR

./: .gitignore  AGENTS.md  CONTEXT.md  HTTPS_INTERCEPTION_RESEARCH.md  NOTICE  README.md  debug_apk_install.bat  gradle.properties  settings.gradle.kts
.trae/rules/: git-commit-message.md
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: app_info.html  log_dashboard.html  log_dashboard_filtered.html  log_dashboard_off.html  log_dashboard_topbar.js
app/src/main/cpp/: CMakeLists.txt  native_traffic_forwarder.c
app/src/main/java/com/haoze/dnssr/: MainActivity.kt
app/src/main/java/com/haoze/dnssr/data/: AppDatabase.kt  BootstrapStatsModels.kt  DnsCacheModels.kt  LogModels.kt  RaceStatsModels.kt
app/src/main/java/com/haoze/dnssr/ui/: AboutScreen.kt  AppListAccess.kt  AppNavHost.kt  AppSettings.kt  AppearanceSettingsScreen.kt  BlockResponseSettingsScreen.kt  BlockedAppsScreen.kt  BootstrapSettingsScreen.kt  BootstrapSettingsViewModel.kt  BootstrapStatsScreen.kt  LogScreen.kt  (+59 more)
app/src/main/res/drawable/: dns_svgrepo_com.xml  ic_github.xml  ic_google_g.xml  ic_launcher_dnssr.xml  ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: aar-build-notes.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tunnel/: bloom.go  compiler.go  conn_log.go  dns_config.go  engine.go  fulltunnel.go  mitm_ca.go  mitm_handler.go  packet.go  resolver.go  tcp_stack_handlers.go  trie.go
(+103 files in other folders)
